--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
 </head>
 <body>
-    <div> </div>
+    <div> 
+        <button> rock </button>
+        <button> paper </button>
+        <button> scissors </button>
+
+    </div>
     
 </body>
 </html>
