--- a/index.html
+++ b/index.html
@@ -5,56 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 
     <!-- Imported font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Outfit:wght@400;700&family=Varela+Round&display=swap" rel="stylesheet">
 
-
-    <style> 
-    body {
-        height: 100vh;
-        width: 100vw;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        font-family: 'Varela Round', sans-serif;
-    }
-
-    img:hover {
-        cursor: pointer;
-    }
-
-    #results {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 50px;
-        margin-top: 20px;
-    }
-
-    #end {
-        font-size: 28px;
-        font-weight: bold;
-    }
-
-    #results div {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        border: 1px solid black;
-        padding: 10px;
-        height: 25vh;
-        min-width: 15vw;
-    }
-    
-
-    
-    </style>
 </head>
 <body>
     <main> 
